spacing issue

--- a/src/index.css
+++ b/src/index.css
@@ -122,7 +122,7 @@ text-overflow: ellipsis;
 color: black;
 }
 .play-to-earn-container{
-  margin-top: 10rem;
+  margin-top: 13rem;
 }
 .play-to-earn-container button{
   width: 100%;
@@ -148,10 +148,10 @@ color: black;
   width: 100%;
 }
 .badge-container span{
-  font-size: 10rem;
+  font-size: 7rem;
   font-weight: 800;
   padding: 3rem;
-  margin-top: 3rem;
+  margin-top: 2rem;
   display: block;
   border-radius: 3rem;
 }
